--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -7,6 +7,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Flex layout */
 body {
+    background: whitesmoke;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
