--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -5,6 +5,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
+/* Common */
+.span-wrap {
+    overflow: auto;
+}
+.span-right {
+    display: inline-block;
+    float: right;
+}
+
+
 /* Flex layout */
 body {
     background: whitesmoke;
